--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "guzzlehttp/psr7": "^1.6",
     "http-interop/http-factory-guzzle": "^1.0",
     "zendframework/zend-diactoros": "^2.1",
-    "slim/http": "^0.8.0"
+    "slim/http": "^0.8.0",
+    "doctrine/orm": "*"
   }
 }
