--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "doctrine/orm": "*",
     "fzaninotto/faker": "^1.8",
     "league/fractal": "^0.18.0",
-    "phpunit/phpunit": "^8.3"
+    "phpunit/phpunit": "^8.3",
+    "monolog/monolog": "^2.0"
   },
   "autoload": {
     "psr-4": {
@@ -19,6 +20,7 @@
     },
     "files": [
       "src/dataBase/entityManager.php",
+      "src/dataBase/modelFactory.php",
       "src/config/database.php"
     ]
   }
