--- a/src/public/.htaccess
+++ b/src/public/.htaccess
@@ -1,3 +1,8 @@
+
+Header always set Access-Control-Allow-Origin: http://localhost:8080
+Header always set Access-Control-Allow-Methods: GET,POST,PATCH,DELETE,PUT
+header always set Access-Control-Allow-Headers: *
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
